# pytest-fastapi-template

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .replit  CLAUDE.md  Dockerfile  Dockerfile.railway  RAILWAY_CLI_COMMANDS.md  README.md  README_DEPLOYMENT.md  README_RAILWAY_DEPLOYMENT.md  README_RAILWAY_DEPLOYMENT_CLI_DETAILS.md  README_RAILWAY_DEPLOYMENT_DETAILS.md  README_RENDER_DEPLOYMENT.md  cloudbuild.yaml  deploy-railway.sh  deploy.sh  docker-compose.yml  gamma-presentation-prompt.md  monrovia_test.json  pyproject.toml  pytest.ini  railway-simple.json  railway.json  render.yaml  requirements.in  requirements.txt  sample_request_multi_array_crewai.json  test_runner.sh  test_video_pipeline.py
allure-results/: 06a8baac-dd6d-4845-a1c0-448afdbc7a04-container.json  078bbe9e-5944-4a0d-9074-0bd7477eeea3-container.json  09e9c1ae-dcdc-408f-a0fe-6eb007a11cda-attachment.txt  10133e51-050d-40bf-a330-f2e274384adc-container.json  12054c63-4bb7-4f4a-bb67-cf1edd888aef-container.json  14ecb00f-f90a-4aa1-9b08-718ba3126bee-container.json  1ef37068-8568-4b7c-910d-bc0140ba4797-result.json  2f993ea8-adec-4023-afca-050fd479620c-attachment.txt  37942e92-7775-45a4-87fe-b538d5499ab3-container.json  3971a618-719b-4535-af18-d8be7aabb9c7-result.json  3d70299a-7de6-4fb0-8a22-8fe5a0994eb0-result.json  41c37daf-3903-441e-b3c2-2b8fee75218b-container.json  46fbaf6d-51f9-459e-aa9d-2c532b7237a0-attachment.txt  4c1274d8-f56a-44e5-b37a-97eaa4fb7a1f-container.json  5116511a-e543-41cb-ad2e-6eba773c3906-container.json  542bdd01-894e-4759-9aa5-201af8a29775-container.json  (+23 more)
(+99 files in other folders)
