[project]
name = "pytest-fastapi-template"
version = "0.1.0"
description = "FastAPI template with pytest testing"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-metadata>=3.1.1",
    "allure-pytest>=2.14.2",
    "openai>=1.79.0",
    "elevenlabs>=1.59.0",
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "pre-commit>=4.0.1",
    "crewai[tools]>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
